[project]
name = "fastreact-docs"
version = "0.1.0"
description = "FastReact documentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-llmstxt>=0.5.0",
    "mkdocs-material[imaging]>=9.7.6",
]

[tool.uv]
constraint-dependencies = ["click<=8.2.1"]
